Start implementing endpoint for verification.
